tsos.css
/* TSOS.css */

body {
  font-size: 12pt;
  font-weight: normal;
  font-style: normal;
}

#divMain {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.boxes {
  display: flex;
  justify-content: space-between;
}

.container {
  display: flex;
  justify-content: center;
}

#divConsole {
  margin-top: 15px;
}

#taskBar {
  display: flex;
  justify-content: space-between;
  padding: 10px;
  margin-top: 4px;
  margin-bottom: 4px;
}

#divButtonBar {
  margin: 6px;
}

h1 {
  color: black;
  font-size: 24pt;
  font-weight: normal;
  font-style: normal;
  border-bottom: 1px solid black;
}

h2 {
  color: black;
  font-size: 20pt;
  font-weight: normal;
  font-style: normal;
}

h3 {
  font-family: Helvetica, Verdana, Arial, sans-serif;
  font-size: 16pt;
  font-weight: normal;
  font-style: normal;
}

#display {
  background-color: #f7f7f7;
  border: 2px solid red;
  cursor: default;
}

.normal_button {
  width: 100px;
}

.footerText {
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 8pt;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  margin-bottom: 10px;
  text-align: center;
}

